--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,12 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.bg-clip-text {
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+.folder::before {
+  /* clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z'); */
+  clip-path: polygon(33.88% 33.88%, 46.95% 25%, 62.75% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 46.95%);
+}
