--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,3 +87,28 @@ body {
   /* clip-path: path('M 0 0 L 160 0 C 185 2, 175 16, 200 18 L 0 50 z'); */
   clip-path: polygon(33.88% 33.88%, 46.95% 25%, 62.75% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 46.95%);
 }
+
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
