--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,3 +112,122 @@ body {
 .rotate-y-180 {
   transform: rotateY(180deg);
 }
+
+/******************************************* 
+  Rich Text Styles
+*******************************************/ 
+
+/* Headers */
+.rich-text h1 {
+  @apply text-4xl font-medium mb-4 text-[#21005E] leading-10;
+}
+
+.rich-text h2 {
+  @apply text-5xl font-medium mt-10 mb-4 text-[#21005E] leading-10;
+}
+
+.rich-text h3 {
+  @apply text-2xl font-medium mb-4 text-[#21005E] leading-10;
+}
+
+.rich-text h4 {
+  @apply text-xl font-medium mb-4 text-[#21005E] leading-10;
+}
+
+.rich-text h5 {
+  @apply text-lg font-medium mb-4 text-[#21005E] leading-10;
+}
+
+.rich-text h6 {
+  @apply text-base font-medium mb-4 text-[#21005E] leading-10;
+}
+
+/* Horizontal rules */
+.rich-text hr {
+  @apply border-[#222027] my-8;
+}
+
+.rich-text a {
+  @apply text-blue-600 underline;
+}
+
+/* Typographic replacements */
+.rich-text p {
+  @apply mb-4 text-lg text-[#222027] leading-8;
+}
+
+/* Emphasis */
+.rich-text strong {
+  @apply font-bold;
+}
+
+.rich-text em {
+  @apply italic;
+}
+
+.rich-text del {
+  @apply line-through;
+}
+
+/* Blockquotes */
+.rich-text blockquote {
+  @apply border-l-4 border-[#222027] pl-4 py-2 mb-4;
+}
+
+/* Lists */
+.rich-text ul {
+  @apply list-disc pl-4 mb-4;
+}
+
+.rich-text ol {
+  @apply list-decimal pl-4 mb-4;
+}
+
+.rich-text li {
+  @apply mb-2;
+}
+
+.rich-text li > ul {
+  @apply list-disc pl-4 mb-2;
+}
+
+.rich-text li > ol {
+  @apply list-decimal pl-4 mb-2;
+}
+
+/* Code blocks */
+.rich-text pre {
+  @apply font-serif bg-[#222027] text-[#222027] rounded p-4  my-6;
+}
+
+.rich-text code {
+  @apply font-serif bg-[#222027] text-[#222027] rounded px-2 py-1;
+}
+
+/* Tables */
+.rich-text table {
+  @apply w-full border-collapse border-[#222027] my-6;
+}
+
+.rich-text th {
+  @apply bg-[#222027] text-left py-2 px-4 font-semibold border-b border-[#222027];
+}
+
+.rich-text td {
+  @apply py-2 px-4 border-b border-[#222027];
+}
+
+/* Images */
+.rich-text img {
+  @apply w-full object-cover rounded-xl my-6;
+}
+
+/* Custom containers */
+.rich-text .warning {
+  @apply bg-yellow-100 border-yellow-500 text-yellow-700 px-4 py-2 rounded-lg mb-4;
+}
+
+
+/******************************************* 
+
+*******************************************/
